fix: responsive alignment fix

--- a/src/components/widgets/DropDown/DropDownWidget.module.scss
+++ b/src/components/widgets/DropDown/DropDownWidget.module.scss
@@ -218,8 +218,8 @@
 
 .contentContainer {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 6rem;
+  grid-template-columns: 52% 1fr; 
+  grid-gap: 5rem;
   align-items: center;
   @media (max-width: 1100px) {
     grid-template-columns: 1fr;
